[package]
authors = ["John Carr <john.carr@unrouted.co.uk>"]
edition = "2021"
name = "hpfeeds-broker"
version = "0.0.1"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hpfeeds/hpfeeds-broker"
description = """
A simple hpfeeds broker
"""

[[bin]]
name = "hpfeeds-broker"
path = "src/bin/server.rs"

[[bench]]
name = "throughput"
harness = false

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1"
rand = "0.8.5"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.37"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.17.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.17.2", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.10.0", optional = true }
socket2 = "0.4.7"
sha1 = "0.10.5"
constant_time_eq = "0.2.4"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
bencher = "0.1.5"

[features]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-otlp"]
