[package]
authors = ["John Carr <john.carr@unrouted.co.uk>"]
edition = "2021"
name = "hpfeeds-broker"
version = "1.2.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hpfeeds/broker"
description = """
A simple hpfeeds broker
"""

[[bin]]
name = "hpfeeds-broker"
path = "src/bin/server.rs"

[[bench]]
name = "throughput"
harness = false

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1"
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive", "string"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.37"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
socket2 = { version = "0.5.6", features = ["all"] }
sha1 = "0.10.5"
constant_time_eq = "0.3.0"
serde = { version = "1", features=["derive"] }
serde_json = "1.0.114"
tokio-rustls = "0.25.0"
rustls-pemfile = "2.1.1"
rustls = "0.22.4"
prometheus-client = "0.22.2"
hyper = { version = "0.14.28", features = ["server", "http1", "tcp"] }
anyhow = "1.0.80"
notify = "6.1.1"
arc-swap = "1.6.0"
rustls-pki-types = "1.3.0"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
bencher = "0.1.5"

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3
