[tool.poetry]
name = "hpfeeds-broker"
version = "3.0.0"
description = "A python implementation of the hpfeeds broker protocol"
authors = ["John Carr <john.carr@unrouted.co.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
aiorun = "^2020.2.1"
aiohttp = "^3.6.2"
prometheus_client = "^0.7.1"
wrapt = "^1.12.1"
aionotify = "^0.2.0"
hpfeeds = "^3.0.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
